--- a/templates/project/projectlist.html
+++ b/templates/project/projectlist.html
@@ -2,7 +2,7 @@
 
 <!--/project/list 二级目录有问题-->
 {% block other-css %}
-<link href="/static/ckeditor/contents.css" rel="stylesheet">
+<!-- <link href="/static/ckeditor/contents.css" rel="stylesheet"> -->
 <script src="{{static_url('libs/js/myjs/multiple-select.js')}}"></script>
 <link rel="stylesheet" href="{{static_url('libs/css/mycss/multiple-select.css')}}">
 {% end %}
@@ -66,10 +66,6 @@
   </div>
 {% end %}
 {% block other-javascript %}
-<!-- <script src="{{static_url('libs/js/jquery.min.js')}}"></script>
-<script src="{{static_url('libs/js/bootstrap.min.js')}}"></script> -->
-<script src="/static/ckeditor/ckeditor.js"></script>
-<script src="/static/js/jquery.validate.min.js"></script>
-<!--<script src="/static/js/jquery.min.js"></script>-->
-<!--<script src="/static/js/bootstrap.min.js"></script>-->
+<!-- <script src="/static/ckeditor/ckeditor.js"></script>
+<script src="/static/js/jquery.validate.min.js"></script> -->
 {% end %}
