--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Home Base</title>
-
+    <!-- 使用static_url防止二级路径访问出错 -->
     <script src="{{static_url('libs/js/jquery.min.js')}}"></script>
     <script src="{{static_url('libs/js/bootstrap.min.js')}}"></script>
     
     <link rel="stylesheet" href="{{static_url('libs/css/bootstrap.min.css')}}">
 
-    <link href="static/libs/css/icomoon/style.css" rel="stylesheet">
+    <!-- <link href="static/libs/css/icomoon/style.css" rel="stylesheet"> -->
+    <link href="{{static_url('libs/css/icomoon/style.css')}}" rel="stylesheet">
     <link href="{{static_url('libs/css/main.css')}}" rel="stylesheet">
     <link href="{{static_url('libs/css/mycss.css')}}" rel="stylesheet">
 
