--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Base</title>
     <!-- 使用static_url防止二级路径访问出错 -->
     <script src="{{static_url('libs/js/jquery.min.js')}}"></script>
