modify all head title

--- a/templates/admin/homepage.html
+++ b/templates/admin/homepage.html
@@ -1,5 +1,9 @@
-
 {% extends "../base.html" %}
+
+{% block head%}
+<title>Home Page</title>
+{% end %}
+
 
 {% block content-nav %}
 	<ul class="breadcrumb">
