--- a/templates/admin/notelist.html
+++ b/templates/admin/notelist.html
@@ -1,6 +1,10 @@
 
 {% extends "../base.html" %}
 
+{% block head%}
+<title>Note Manager</title>
+{% end %}
+
 {% block content-nav %}
 	<ul class="breadcrumb">
 		<li>
