--- a/templates/admin/useredit.html
+++ b/templates/admin/useredit.html
@@ -1,5 +1,9 @@
 {% extends "../base.html" %}
 
+{% block head%}
+<title>User Edit</title>
+{% end %}
+
 {% block other-css %}
 <link href="/static/ckeditor/contents.css" rel="stylesheet">
 {% end %}
