--- a/templates/admin/usermanage.html
+++ b/templates/admin/usermanage.html
@@ -1,6 +1,10 @@
 
 {% extends "../base.html" %}
 
+{% block head%}
+<title>User Manage</title>
+{% end %}
+
 {% block other-css %}
 <script src="{{static_url('libs/js/myjs/bootstrap-paginator.js')}}"></script>
 <script src="{{static_url('libs/js/myjs/multiple-select.js')}}"></script>
