--- a/templates/project/projectlist.html
+++ b/templates/project/projectlist.html
@@ -1,6 +1,10 @@
 {% extends "../base.html" %}
 
 <!--/project/list 二级目录有问题-->
+{% block head%}
+<title>Porject Manage </title>
+{% end %}
+
 {% block other-css %}
 <!-- <link href="/static/ckeditor/contents.css" rel="stylesheet"> -->
 <script src="{{static_url('libs/js/myjs/multiple-select.js')}}"></script>
