--- a/templates/admin/usersetting.html
+++ b/templates/admin/usersetting.html
@@ -1,5 +1,9 @@
 {% extends "../base.html" %}
 
+{% block head%}
+<title>Admin Setting</title>
+{% end %}
+
 {% block content-nav %}
 	<ul class="breadcrumb">
 		<li>
