--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block head%}
     <title>Home Base</title>
+    {% end %}
     <!-- 使用static_url防止二级路径访问出错 -->
     <script src="{{static_url('libs/js/jquery.min.js')}}"></script>
     <script src="{{static_url('libs/js/bootstrap.min.js')}}"></script>
