--- a/templates/project/projectadd.html
+++ b/templates/project/projectadd.html
@@ -1,5 +1,9 @@
 {% extends "../base.html" %}
 
+{% block head%}
+<title>Project Add</title>
+{% end %}
+
 {% block other-css %}
 <link href="/static/ckeditor/contents.css" rel="stylesheet">
 <script src="{{static_url('libs/js/myjs/multiple-select.js')}}"></script>
