adjust table size

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,minimum-scale=1,user-scalable=0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block head%}
     <title>Home Base</title>
     {% end %}
@@ -76,7 +77,7 @@
 <div class="container-fluid">
     <div class="row-fluid">
         <!-- left menu starts -->
-        <div class="span2 main-menu-span" style="border:solid 1px black">
+        <div class="span3 main-menu-span" style="border:solid 1px black">
             <div class="well nav-collapse sidebar-nav" style="border:solid 1px red;margin-top: 100px">
                 <ul class="nav nav-tabs nav-stacked main-menu menu-style">
                     <li class="nav-header hidden-tablet">Main</li>
