--- a/templates/project/projectlist.html
+++ b/templates/project/projectlist.html
@@ -9,6 +9,7 @@
 <!-- <link href="/static/ckeditor/contents.css" rel="stylesheet"> -->
 <script src="{{static_url('libs/js/myjs/multiple-select.js')}}"></script>
 <link rel="stylesheet" href="{{static_url('libs/css/mycss/multiple-select.css')}}">
+<link rel="stylesheet" href="{{static_url('libs/css/mycss.css')}}">
 {% end %}
 
 {% block content-nav %}
