--- a/static/libs/css/mycss.css
+++ b/static/libs/css/mycss.css
@@ -67,6 +67,21 @@ table{
 	color: black;
 	font-size: 18px;
 }
+table th{
+	color: black;
+	/*border:solid 1px black;*/
+	border-collapse: separate;
+	font-size: 17px;
+}
+table td{
+	color: blue;
+	font-size: 16px;
+	/*width: 300px;*/
+	table-layout: fixed;
+	text-overflow: ellipsis;  /*显示省略符号来代表被修剪的文本*/
+	overflow: hidden;
+	word-wrap: break-word;
+}
 .main-menu-span{
 	font-size: 20px;
 	margin-left:-20px;
