--- a/templates/admin/signin.html
+++ b/templates/admin/signin.html
@@ -60,6 +60,7 @@
                     success: function (data){
                         if(data.error_code==0){
                             // window.location.href = "/tableTest"
+                            $("#msgSignin").html("");
                             window.location.href = "/home"
                         }
                         else{
