--- a/static/libs/css/mycss.css
+++ b/static/libs/css/mycss.css
@@ -88,7 +88,7 @@ table td{
 }
 form div input{
 	height: 30px;
-	font-size: 18px;
+	font-size: 20px;
 }
 form span{
     font-size:18px;
@@ -128,6 +128,18 @@ form span{
 	max-width: 400px;
 }
 /* 编辑输入统一样式*/
+#edit-setting input {
+	height: 30px;
+	font-size: 16px;
+}
+#edit-setting select {
+	height: 30px;
+	font-size: 16px;
+}
+/*#edit-setting textarea {
+	height: 30px;
+	font-size: 16px;
+}*/
 #additem input{
 	min-width: 120px;
 	max-width: 400px;
