--- a/templates/admin/usersetting.html
+++ b/templates/admin/usersetting.html
@@ -33,7 +33,7 @@
 				<div class="control-group">
 					<label for="currentname" class="control-label">当前用户</label>
 					<div class="controls">
-						<input type="text" value="{{ setting['currentname']}}" id="currentname" name="currentname" class="input-large">
+						<input type="text" value="{{ setting['currentname']}}" id="currentname" name="currentname" class="input-medium">
 					</div> <!-- /controls -->
 				</div> <!-- /control-group -->
 				
@@ -47,7 +47,7 @@
 				<div class="control-group">
 					<label for="admin_email" class="control-label">管理员邮箱</label>
 					<div class="controls">
-						<input type="text" value="{{ setting['admin_email']}}" id="admin_email" name="admin_email" class="input-medium">
+						<input type="text" value="{{ setting['admin_email']}}" id="admin_email" name="admin_email" class="input-large">
 					</div> <!-- /controls -->
 				</div> <!-- /control-group -->
 				
