--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,8 @@
                     <li><a class="ajax-link" href="/note/list"><i class="icon-list-alt"></i><span class="hidden-tablet"> Note List</span></a></li>
                     <li><a class="ajax-link" href="/project/list"><i class="icon-list"></i><span class="hidden-tablet"> Project List</span></a></li>
                     <li><a class="ajax-link" href="/task"><i class="icon-th-list"></i><span class="hidden-tablet"> Task List</span></a></li>
-                    <li><a class="ajax-link" href="/bug/list"><i class="icon-th-list"></i><span class="hidden-tablet"> Bug List</span></a></li>
+        <!--             <li><a class="ajax-link" href="/bug/list"><i class="icon-th-list"></i><span class="hidden-tablet"> Bug List</span></a></li> -->
+                    <li><a class="ajax-link" href="/bugtrack/list"><i class="icon-th-list"></i><span class="hidden-tablet"> Bug Track List</span></a></li>
                     <li class="nav-header hidden-tablet">User Manage</li>
                     <li><a class="ajax-link" href="/user/list"><i class="icon-user"></i><span class="hidden-tablet"> User List</span></a></li>
                     <li><a class="ajax-link" href="/usersetting"><i class="icon-wrench"></i><span class="hidden-tablet"> Setting</span></a></li>
