--- a/static/libs/css/mycss.css
+++ b/static/libs/css/mycss.css
@@ -22,7 +22,9 @@ button {
 	font-size: 20px;
 }
 textarea {
-    width:500px;
+    width: 500px;
+    height: 100px;
+    margin-left: -20px;
 }
 /* single select */
 select {
@@ -32,6 +34,7 @@ select {
     margin: 0;
     font-size: 20px;  /*字体设置和option中一致*/
     vertical-align: middle;
+    margin-left: -20px;
 }
 option {
 	text-align: center;
@@ -88,7 +91,7 @@ table td{
 }
 form div input{
 	height: 30px;
-	font-size: 18px;
+	font-size: 20px;
 }
 form span{
     font-size:18px;
@@ -128,6 +131,18 @@ form span{
 	max-width: 400px;
 }
 /* 编辑输入统一样式*/
+#edit-setting input {
+	height: 30px;
+	font-size: 16px;
+}
+#edit-setting select {
+	height: 30px;
+	font-size: 16px;
+}
+/*#edit-setting textarea {
+	height: 30px;
+	font-size: 16px;
+}*/
 #additem input{
 	min-width: 120px;
 	max-width: 400px;
