--- a/templates/admin/signin.html
+++ b/templates/admin/signin.html
@@ -116,7 +116,7 @@
                 <div class="form-group" >
                     <label  class="col-sm-4 control-label" >验证码:</label>
                     <div class="col-sm-8">
-                        <input class="form-control inputcss" style="width:100px;float:left" id="inputCode" name="inputCode" value="1234"/>
+                        <input class="form-control inputcss" style="width:100px;float:left" id="inputCode" name="inputCode" value=""/>
                         <img src="" alt="验证码" id="imgVerifyCode" style="margin-left:10px;width:100px"/>
                         <a src="#" id="verifyCode" class="btn btn-link" onclick="createCode()" style="">换一张</a>
                     </div>
