--- a/templates/bug/bugtrackedit.html
+++ b/templates/bug/bugtrackedit.html
@@ -22,7 +22,7 @@
 			<a href="/home">Home</a> <span class="divider">/</span>
 		</li>
 		<li>
-			<a href="/bugtrack/add">Add New Bug Track</a>
+			<a href="/bugtrack/edit">Edit Bug Track</a>
 		</li>
 		<li class="pull-right">
 			<i class="icon-arrow-left"></i>
@@ -39,17 +39,17 @@
 
 {% block content-body %}
 	<div class="box-content">
-    <form action="/bugtrack/add" class="form-horizontal" method="post" id="addbug2">
+    <form action="/bugtrack/edit/{{bug['bug_id']}}" class="form-horizontal" method="post" id="addbug2">
     {% module xsrf_form_html() %}
     {% autoescape None %}
       <fieldset>
-        <legend>添加缺陷信息</legend>
+        <legend>修改缺陷信息</legend>
         <div class="control-group">
             <label for="bug_project_id" class="control-label" style="color: black;">项目名称：</label>
             <div class="controls">
                 <select name="bug_project_id" id="ms_project_name" class="selectpicker">
                     {% for project in projects %}
-                    <option value="{{project.project_id}}">{{project.project_name}}</option>
+                    <option value="{{project.project_id}}" {% if project.project_id == bug['bug_project_id'] %}selected{% end %}>{{project.project_name}}</option>
                     {% end %}
                 </select>
             </div> 
@@ -57,7 +57,7 @@
         <div class="control-group">
             <label for="project_version" class="control-label" style="color: black;">所属版本：</label>
             <div class="input-append date" id="project_version">
-                <input class="span2" class="input-medium" name="project_version" type="text">
+                <input class="span2" value="{{bug['project_version']}}" class="input-medium" name="project_version" type="text">
             </div> 
         </div> <!-- /control-group -->
         <div class="control-group">
@@ -65,7 +65,7 @@
             <div class="controls">
                 <select name="bug_component" id="ms_project_name" class="selectpicker">
                     {% for project in projects %}
-                    <option value="{{project.project_id}}">{{project.project_name}}</option>
+                    <option value="{{project.project_id}}" {% if project.project_id == bug['bug_component'] %}selected{% end %}>{{project.project_name}}</option>
                     {% end %}
                 </select>
             </div> 
@@ -73,13 +73,13 @@
         <div class="control-group">
             <label for="component_community" class="control-label" style="color: black;">社区讨论：</label>
             <div class="input-append date" id="component_community">
-                <input class="span2" class="input-medium" name="component_community" type="text">
+                <input class="span2" value="{{bug['component_community']}}" class="input-medium" name="component_community" type="text">
             </div> 
         </div> <!-- /control-group -->
         <div class="control-group">
             <label for="bug_date_receive" class="control-label" style="color: black;">接收时间：</label>
-            <div class="input-append date" id="datetimepicker_receive">
-                <input class="span2" size="16" name="bug_date_receive" type="text" readonly=""  id="date_receive">
+            <div class="input-append date" id="datetimepicker_receive1">
+                <input class="span2" size="16" name="bug_date_receive" type="text" readonly=""  id="date_receive" value="{{bug['bug_date_receive']}}">
                 <span class="add-on"><i class="icon-remove"></i></span>
                 <span class="add-on"><i class="icon-th"></i></span>
             </div> 
@@ -89,7 +89,7 @@
             <div class="controls">
                 <select name="bug_find_by" id="ms_user_find" class="selectpicker">
                     {% for user in users %}
-                    <option value="{{user.id}}">{{user.username}}</option>
+                    <option value="{{user.id}}" {% if user.id == bug['bug_find_by'] %}selected{% end %}>{{user.username}}</option>
                     {% end %}
                 </select>
             </div> 
@@ -99,7 +99,7 @@
             <div class="controls">
                 <select name="bug_user_done" id="ms_user_find" class="selectpicker">
                     {% for user in users %}
-                    <option value="{{user.id}}">{{user.username}}</option>
+                    <option value="{{user.id}}" {% if user.id == bug['bug_user_done'] %}selected{% end %}>{{user.username}}</option>
                     {% end %}
                 </select>
             </div> 
@@ -108,10 +108,10 @@
             <label for="bug_level" class="control-label" style="color: black;">优先级 ：</label>
             <div class="controls">
                 <select name="bug_level" id="ms_user_find" class="selectpicker">
-                    <option value="0">低</option>
-                    <option value="0">中</option>
-                    <option value="0">高</option>
-                    <option value="0">急</option>
+                    <option value="0" {% if 0 == bug['bug_level'] %}selected{% end %}>低</option>
+                    <option value="1" {% if 1 == bug['bug_level'] %}selected{% end %}>中</option>
+                    <option value="2" {% if 2 == bug['bug_level'] %}selected{% end %}>高</option>
+                    <option value="3" {% if 3 == bug['bug_level'] %}selected{% end %}>急</option>
                 </select>
             </div> 
         </div>
@@ -119,6 +119,7 @@
             <label for="bug_describe" class="control-label" style="color: black;">问题描述：</label>
             <div class="controls">
                 <textarea rows="10" cols="400" id="describe" name="bug_describe">
+                    {{bug['bug_describe']}}
                 </textarea>
             </div> <!-- /controls -->
         </div> <!-- /control-group -->
@@ -126,6 +127,7 @@
             <label for="bug_reason" class="control-label" style="color: black;">问题原因：</label>
             <div class="controls">
                 <textarea rows="10" cols="400" id="describe" name="bug_reason">
+                    {{bug['bug_reason']}}
                 </textarea>
             </div> <!-- /controls -->
         </div> <!-- /control-group -->
@@ -133,6 +135,7 @@
             <label for="bug_solution" class="control-label">解决措施：</label>
             <div class="controls">
                 <textarea rows="10" cols="400" id="describe" name="bug_solution">
+                    {{bug['bug_solution']}}
                 </textarea>
             </div> <!-- /controls -->
         </div> <!-- /control-group -->
@@ -140,21 +143,22 @@
             <label for="bug_progress" class="control-label">进   展：</label>
             <div class="controls">
                 <textarea rows="10" cols="400" id="describe" name="bug_progress">
+                    {{bug['bug_progress']}}
                 </textarea>
             </div> <!-- /controls -->
         </div> <!-- /control-group -->
         <div class="control-group">
             <label for="bug_date_plan" class="control-label" style="color: black;">计划日期：</label>
-            <div class="input-append date" id="datetimepicker1">
-                <input class="span2" size="16" name="bug_date_plan" type="text" readonly=""  id="date_plan">
+            <div class="input-append date" id="datetimepicker_e1">
+                <input class="span2" size="16" name="bug_date_plan" type="text" readonly=""  id="date_plan" value="{{bug['bug_date_plan']}}">
                 <span class="add-on"><i class="icon-remove"></i></span>
                 <span class="add-on"><i class="icon-th"></i></span>
             </div> 
         </div> <!-- /control-group -->
         <div class="control-group">
             <label for="bug_date_done" class="control-label" style="color: black;">解决日期：</label>
-            <div class="input-append date" id="datetimepicker2">
-                <input class="span2" size="16" name="bug_date_done" type="text" readonly=""  id=date_done>
+            <div class="input-append date" id="datetimepicker_e2">
+                <input class="span2" size="16" name="bug_date_done" type="text" readonly=""  id=date_done value="{{bug['bug_date_done']}}">
                 <span class="add-on"><i class="icon-remove"></i></span>
                 <span class="add-on"><i class="icon-th"></i></span>
             </div> 
@@ -162,7 +166,7 @@
         <div class="control-group">
             <label for="bug_version" class="control-label" style="color: black;">合入版本：</label>
             <div class="input-append date" id="bug_version">
-                <input class="span2" class="input-medium" name="bug_version" type="text">
+                <input class="span2" value="{{bug['bug_version']}}" class="input-medium" name="bug_version" type="text">
             </div> 
         </div> <!-- /control-group -->
         {% for msg in message %}
@@ -173,7 +177,7 @@
         <div class="form-actions control-group">
             <div >
               <button type="reset" class="btn">重置</button>
-              <button type="submit" class="btn btn-primary">创建</button>
+              <button type="submit" class="btn btn-primary">修改</button>
             </div>
         </div>
       </fieldset>
@@ -194,14 +198,14 @@
     var date = myDate.getDate();
     var now_date = year + '-' + conver(month) + "-" + conver(date);
     console.log(now_date);
-    $('#datetimepicker1').datetimepicker({
+    $('#datetimepicker_e1').datetimepicker({
         format: 'yyyy-mm-dd'
         ,locale: moment.locale('zh-cn')
         ,minView: 2       // 只显示日期，不显示具体时间
         ,language: 'zh-cn'
         ,defaultDate: now_date
     });
-    $('#datetimepicker2').datetimepicker({
+    $('#datetimepicker_e2').datetimepicker({
         format: 'yyyy-mm-dd'
         ,locale: moment.locale('zh-cn')
         ,minView: 2       // 只显示日期，不显示具体时间
@@ -209,28 +213,12 @@
         ,defaultDate: now_date
     });
     // datetimepicker_receive
-    $('#datetimepicker_receive').datetimepicker({
+    $('#datetimepicker_receive1').datetimepicker({
         format: 'yyyy-mm-dd'
         ,locale: moment.locale('zh-cn')
         ,minView: 2       // 只显示日期，不显示具体时间
         ,language: 'zh-cn'
         ,defaultDate: now_date
     });
-    // startView: 2, maxViewMode: 1,minViewMode:1,这三个参数，第一个表示起始选择范围，0为日，1为月，2为年，第二个参数表示最大选择范围，第三个表示最小选择范围。数字意义同第一个参数。
-    // $('#datetimepicker2').datetimepicker('setDaysOfWeekDisabled');
-    document.getElementById('date_plan').value=my_date();
-    document.getElementById('date_done').value=my_date();
-    document.getElementById('date_receive').value=my_date();
-    function my_date(){
-        var myDate = new Date();
-        var year = myDate.getFullYear();
-        var month = myDate.getMonth() + 1;
-        var date = myDate.getDate();
-        var now_date = year + '-' + conver(month) + "-" + conver(date);
-        return now_date
-    }
-    function conver(s) {
-        return s < 10 ? '0' + s : s;
-    }
 </script>
 {% end %}
