--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="/logout">
                     Logout
                 </a>
             </li>
