use low version tornado=5.1 pillow=5.2

--- a/static/libs/css/mycss.css
+++ b/static/libs/css/mycss.css
@@ -134,6 +134,7 @@ form span{
 #edit-setting input {
 	height: 30px;
 	font-size: 16px;
+	margin-left: 20px;
 }
 #edit-setting select {
 	height: 30px;
