--- a/templates/bug/bugtrackadd.html
+++ b/templates/bug/bugtrackadd.html
@@ -39,7 +39,7 @@
 
 {% block content-body %}
 	<div class="box-content">
-    <form action="/bugtrack/add" class="form-horizontal" method="post" id="addbug2">
+    <form action="/bugtrack/add" class="form-horizontal" method="post" id="addbugtrack">
     {% module xsrf_form_html() %}
     {% autoescape None %}
       <fieldset>
