--- a/templates/bug/compmtlist.html
+++ b/templates/bug/compmtlist.html
@@ -64,7 +64,7 @@
           </select>
       </div>
     </div>
-    <div class="controls col-sm-2">
+    <div class="controls col-sm-2" id="searchlist_btn">
           <button onclick="getCompmtList()" type="button" id="searchCompmt" class="btnConfirm" style="width:100px;color:blue;">查询
           </button>    
     </div> 
