supervisro start.sh

--- a/templates/project/projectadd.html
+++ b/templates/project/projectadd.html
@@ -92,7 +92,7 @@
 {% end %}
 
 {% block other-javascript %}
-<script src="/static/ckeditor/ckeditor.js"></script>
+<!--<script src="/static/ckeditor/ckeditor.js"></script>-->
 <!--<script src="/libs/js/myjs/multiple-select.js"></script>-->
 <!--<script src="{{static_url('libs/js/myjs/multiple-select.js')}}"></script>-->
 <!--<link rel="stylesheet" href="{{static_url('libs/css/mycss/multiple-select.css')}}">-->
