--- a/templates/project/task.html
+++ b/templates/project/task.html
@@ -107,7 +107,7 @@
 {% end %}
 
 {% block other-javascript %}
-<script src="/static/ckeditor/ckeditor.js"></script>
+<!--<script src="/static/ckeditor/ckeditor.js"></script>-->
 <script>
     $(function() {
         $('#ms').change(function() {
