--- a/templates/bug/bugedit.html
+++ b/templates/bug/bugedit.html
@@ -108,5 +108,5 @@
 {% end %}
 
 {% block other-javascript %}
-<script src="/static/ckeditor/ckeditor.js"></script>
+<!--<script src="/static/ckeditor/ckeditor.js"></script>-->
 {% end %}
