--- a/templates/extrabase.html
+++ b/templates/extrabase.html
@@ -20,7 +20,7 @@
 		
 	</dir>
 </header>
-<div class="container-fluid debug" style="height: 200px;">
+<div class="container-fluid debug">
 	<div class="row-fluid">
 		<!-- nav -->
 		<div class="col-md-12 e-nav">
@@ -37,29 +37,41 @@
 		<!-- left -->
 		<div class="col-md-2"></div>
 		<!-- main -->
-		<div class="col-md-8 debug" style="height: 100px;">
+		<div class="col-md-8">
+			{% block main %}
 			<div class="col-md-12">
-				<div class="col-md-8">
-					<a href="#">python 中文解码问题</a>
+				<hr style="filter: alpha(opacity=100,finishopacity=0,style=2)" width="100%" color="#6f5499" size="10"/>
+			</div>
+			{% for topic in topics %}
+			<div class="col-md-12">
+				<div class="col-md-8 topic">
+					<a href="#">{{topic.title}}</a>
 				</div>
-				<div class="col-md-4 debug">
-					<a>作者：龙卷风</a>
+				<div class="col-md-4 rightsytle">
+					<a>作者：{{topic.author}}</a>
 				</div>
 			</div>
 			<div class="col-md-12">
-				...
+				<div class="col-md-11 topic">
+					<label>{{topic.content}}</label>
+				</div>
 			</div>
 			<div class="col-md-12">
 				<div class="col-md-3">
-					<a href="#">回复：12</a>
+					<a href="#">回复：{{topic.discuss}}</a>
 				</div>
 				<div class="col-md-3">
-					<a href="#">点赞：12</a>
+					<a href="#">点赞：{{topic.likes}}</a>
 				</div>
-				<div class="col-md-6 createtime debug">
-					<label>2019-08-01 19:37:12</label>
+				<div class="col-md-6 createtime rightsytle">
+					<label>{{topic.create}}</label>
 				</div>
 			</div>
+			{% end %}
+			<div class="col-md-12">
+				<hr style="filter: alpha(opacity=100,finishopacity=0,style=2)" width="100%" color="#6f5499" size="10"/>
+			</div>
+			{% end %}
 		</div>
 		<!-- right -->
 		<div class="col-md-2"></div>
