--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,11 @@
                 </a>
             </li>
             <li>
+                <a href="/extra">
+                    Extra
+                </a>
+            </li>
+            <li>
                 <a href="/logout">
                     Logout
                 </a>
