--- a/templates/extra/topic.html
+++ b/templates/extra/topic.html
@@ -44,7 +44,7 @@
 
 {% block main %}
 <div class="col-md-12">
-	{% if topic == null %}
+	{% if topic == None %}
 	<div class="col-md-4">
 		<label>选择分类：</label>
 	</div>
