--- a/templates/admin/signin.html
+++ b/templates/admin/signin.html
@@ -30,6 +30,15 @@
     <script type="text/javascript">
         createCode();
 
+        // key Enter event , body onkeydown propery
+        function keysignin(e){
+            console.log("signin ", e);
+            if (!e) e = window.event;//考虑浏览器兼容性
+                if ((e.keyCode || e.which) == 13) {
+                   sign();
+                }
+        }
+
         $("verifyCode").on('click',function () {
             alert("换一张");
             createCode();
@@ -97,7 +106,7 @@
         }
     </script>
 </head>
-<body class="rectangle" >
+<body class="rectangle"  onkeydown="keysignin(event)">
 	<div class="row clearfix"  >
         <div class="rect" >
             <form class="form-horizontal" role="form" id="signinform" action="/signin" method="post">
