--- a/templates/extrabase.html
+++ b/templates/extrabase.html
@@ -21,17 +21,22 @@
 	<div class="divheader debug">
 		<div class="col-md-8 debug"></div>
 		<div class="col-md-4 debug">
-			<button class="btn">Action</button>
+			{% if user is None %}
+			<button class="btn">登录</button>
+			{% else %}
+			<button class="btn">{{user.nickname}}</button>
 			<button class="btn dropdown-toggle" data-toggle="dropdown" style="margin-left: -7px;">
 			    <span class="caret"></span>
 			</button>
 			<ul class="dropdown-menu">
 				<li><a>个人信息</a></li>
 			    <li><a href="/topic/admin">我的博客</a></li>
+			    <li><a href="/home">我的主页</a></li>
 			    <li class="divider"></li>
 			    <li><a>设置</a></li>
 			    <li><a href="/logout">退出</a></li>
 			</ul>
+			{% end %}
 			<label style="width: 160px;float: right;margin-top: 10px;margin-right: 20px;"><span id="currentdate" ></span></label>
 		</div>
 	</div>
