--- a/templates/extrabase.html
+++ b/templates/extrabase.html
@@ -5,10 +5,10 @@
     {% block title %}
     <title>Extra Home</title>
     {% end %}
-    <script src="{{static_url('libs/js/jquery.min.js')}}"></script>
-    <script src="{{static_url('libs/js/bootstrap.min.js')}}"></script>
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="{{static_url('libs/js/common.js')}}"></script>
-    <link rel="stylesheet" href="{{static_url('libs/css/bootstrap.min.css')}}">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{{static_url('libs/css/extra.css')}}">
     {% block js-css %}
     {% end %}
