--- a/templates/admin/signin.html
+++ b/templates/admin/signin.html
@@ -6,8 +6,8 @@
     <!--set webpage width and height user can not change-->
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=no"/>-->
     <title>Sign in</title>
-    <script type="text/javascript" src="{{static_url('libs/js/jquery.min.js')}}"></script>
-    <link rel="stylesheet" href="{{static_url('libs/css/bootstrap.min.css')}}">
+    <script type="text/javascript" src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <style type="text/css">
         html{
             min-width: 500px;
