--- a/templates/admin/testclick.html
+++ b/templates/admin/testclick.html
@@ -4,7 +4,7 @@
 <!--<html xmlns="http://www.w3.org/1999/xhtml" lang="en">-->
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script src="{{static_url('libs/js/jquery.min.js')}}"></script>
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <script type="text/javascript">
      $("#confirm").click(function(){
