--- a/templates/admin/usermanage.html
+++ b/templates/admin/usermanage.html
@@ -93,8 +93,8 @@
   </div>
 {% end %}
 {% block other-javascript %}
-<!-- <script src="{{static_url('libs/js/jquery.min.js')}}"></script>
-<script src="{{static_url('libs/js/bootstrap.min.js')}}"></script> -->
+<!-- <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 <!--<script src="/static/js/jquery.min.js"></script>-->
 <!--<script src="/static/js/bootstrap.min.js"></script>-->
 <script>
