--- a/templates/bug/multiselect.html
+++ b/templates/bug/multiselect.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,
           maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title></title>
-    <script src="{{static_url('libs/js/jquery.min.js')}}"></script>
-    <script src="{{static_url('libs/js/bootstrap.min.js')}}"></script>
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="{{static_url('libs/css/bootstrap.min.css')}}">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 
     <link href="static/libs/css/icomoon/style.css" rel="stylesheet">
     <link href="{{static_url('libs/css/main.css')}}" rel="stylesheet">
