--- a/templates/sendemail.html
+++ b/templates/sendemail.html
@@ -7,8 +7,8 @@
     <!--set webpage width and height user can not change-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>login</title>
-    <link rel="stylesheet" href="{{static_url('libs/css/bootstrap.min.css')}}">
-	<script type="text/javascript" src="{{static_url('libs/js/jquery.min.js')}}"></script>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	<script type="text/javascript" src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="{{static_url('libs/js/emailcode.js')}}"></script>
 	<script type="text/javascript" src="static/libs/js/formverify.js"></script>
 	<script type="text/javascript" src="static/libs/js/jquery.cookie.js"></script>
