--- a/templates/tabletest.html
+++ b/templates/tabletest.html
@@ -7,8 +7,8 @@
     <title>找回密码-确认帐号</title>
     <!--<link rel="shortcut icon" href="https://www.baidu.com/favicon.ico" type="image/x-icon" />-->
     <!--<link rel="icon" sizes="any" href="https://www.baidu.com/img/baidu.svg">-->
-    <script type="text/javascript" src="{{static_url('libs/js/jquery.min.js')}}"></script>
-    <link rel="stylesheet" href="{{static_url('libs/css/bootstrap.min.css')}}">
+    <script type="text/javascript" src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <style type="text/css">
         .borderview{
             border:solid 1px;
